fixed how card image displays on mobile devices

--- a/style.css
+++ b/style.css
@@ -199,6 +199,8 @@ li {
     .card-img.card-img {
       max-width: 90%;
       box-shadow: 2px 2px 10px 4px rgb(0, 0, 0, 0.6);
+      margin-left: 5%;
+      margin-right: 5%;
       margin-bottom: 1vh;
     }
 
